# courseRegestrationPortal

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: client.c.68B48B6B4AE6CB42.idx  client_routine.c.E37C59A1E86F7B3F.idx  client_routine.h.BC18051D58A8AFEC.idx  client_ui.c.49B9A46DA77BAAE7.idx  client_ui.h.A1457A98A6DEB263.idx  course_resource.c.9E2B2ADF524BBFA6.idx  faculty_resource.c.AFA626182738955A.idx  models.h.91D9C9F6996C2AEC.idx  resource_api.c.AA9A925169E5A12A.idx  resource_api.h.022250F01C588552.idx  server.c.595A98B892BD5C9B.idx  server.h.4DE55FD43E5D7777.idx  student.c.5605BEF9648297EC.idx  student_course_resource.c.A57C7D5BEE1A8823.idx  student_resource.c.650C03C12660DC8A.idx
include/: client_routine.h  client_ui.h  models.h  resource_api.h  server.h
src/client/: client.c  client_ui.c
src/server/: client_routine.c  server.c
src/server/resource_api/: course_resource.c  faculty_resource.c  resource_api.c  student_course_resource.c  student_resource.c
